# delegate

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am  resources.xml
include/: Makefile.am  delegate.h  dice.h  main_window.h
src/: Makefile.am  delegate.c  dice.c  main.c  main_window.c
